# Prop-5

./: .clangd  .gitignore  CMakeLists.txt  Prop-5_installer.iss  README.en.md  README.md  README_macOS_Linux.md
.docs/: Project handover summary.md  future_development_plan.md
.docs/資料/: ビルドコマンド.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetData.h  PropLookAndFeel.cpp  PropLookAndFeel.h
Source/DSP/: Envelope.cpp  Envelope.h  LadderFilter.cpp  LadderFilter.h  Oscillator.cpp  Oscillator.h  Prop5Synthesiser.h  Voice.cpp  Voice.h
docs/: how_to_build.en.md  how_to_build.md  manual.en.md  manual.md  prop-5_technical_spec.md
scripts/: Prop-5.iss  README_Install_template.txt  package_release.ps1
